# macro_lens

./: LICENSE.md  README.md  database.py  docker-compose.yaml  main.py  models.py  package-lock.json  package.json  pyproject.toml
backend/: .dockerignore  .gitignore  Dockerfile  database.py  estimator.py  main.py  models.py  pyproject.toml  security.py
backend/migrations/: env.py
backend/migrations/versions/: 504770b12da8_initial.py
frontend/: .firebaserc  .gitignore  firebase.json  firebase.ts  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: axios.ts
frontend/src/components/: UserOverlay.tsx
frontend/src/hooks/: useFood.ts  useGoogleLogin.ts  useHealth.ts  useUser.ts  useUserAccountStatus.ts
frontend/src/pages/: LoadingPage.tsx  LoginPage.tsx  RejectedPage.tsx  WaitingPage.tsx
